--- a/Backend/N5/src/User/N5.User.Test/N5.User.Test.csproj
+++ b/Backend/N5/src/User/N5.User.Test/N5.User.Test.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -21,9 +21,11 @@
 		</SonarQubeSetting>
 	</ItemGroup>
 	<ItemGroup>
+		<PackageReference Include="AutoMapper" Version="12.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.12" />
 		<PackageReference Include="Microsoft.AspNetCore.TestHost" Version="6.0.12" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
+		<PackageReference Include="Moq" Version="4.20.69" />
 		<PackageReference Include="NUnit" Version="3.13.3" />
 		<PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
 		<PackageReference Include="NUnit.Analyzers" Version="3.3.0" />
@@ -33,6 +35,11 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\N5.Microservice.User\N5.User.Domain\N5.User.Domain.csproj" />
+	  <ProjectReference Include="..\N5.User.Api\N5.User.Api.csproj" />
+	  <ProjectReference Include="..\N5.User.Application\N5.User.Application.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Application\UseCases\Permission\" />
 	</ItemGroup>
 
 </Project>
