--- a/Backend/N5/FrontEnd/n5app/tsconfig.json
+++ b/Backend/N5/FrontEnd/n5app/tsconfig.json
@@ -1,5 +1,12 @@
 {
   "compilerOptions": {
+    "baseUrl": ".", // This must be specified if "paths" is.
+    "paths": {
+      "domain/*": ["src/domain/*"], // This mapping is relative to "baseUrl",
+      "infrastructure/*": ["src/infrastructure/*"], // This mapping is relative to "baseUrl"
+      "application/*": ["src/application/*"], // This mapping is relative to "baseUrl"
+      "presentation/*": ["src/presentation/*"], // This mapping is relative to "baseUrl"
+    },
     "target": "es5",
     "lib": [
       "dom",
@@ -22,5 +29,5 @@
   },
   "include": [
     "src"
-  ]
+, "tailwind.config.js"  ]
 }
