--- a/Backend/N5/FrontEnd/n5app/package.json
+++ b/Backend/N5/FrontEnd/n5app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,14 +14,17 @@
     "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "redux-saga": "^1.2.1",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.7.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@types/redux-logger": "^3.0.9",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-config-standard-jsx": "^11.0.0",
@@ -31,6 +35,7 @@
     "eslint-plugin-promise": "^6.0.1",
     "eslint-plugin-react": "^7.31.8",
     "jest": "^26.6.3",
+    "redux-logger": "^3.0.6",
     "tailwindcss": "^3.3.3"
   },
   "scripts": {
