--- a/Backend/N5/FrontEnd/n5app/package.json
+++ b/Backend/N5/FrontEnd/n5app/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-use-websocket": "^3.0.0",
     "redux-saga": "^1.2.1",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.7.0",
