--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,17 @@ Backend/N5/FrontEnd/n5app/public/
 Backend/N5/src/User/N5.User.Api/obj/
 
 *.sentinel
+
+Backend/N5/src/Architecture/N5.Eda.Kafka/obj/
+
+Backend/N5/src/User/N5.Microservice.User/N5.User.Domain/obj/
+
+Backend/N5/src/User/N5.User.Api/bin/
+
+Backend/N5/src/User/N5.User.Application/bin/
+
+Backend/N5/src/User/N5.User.Application/obj/
+
+Backend/N5/src/User/N5.User.Infrastructure.Persistence/obj/
+
+Backend/N5/src/User/N5.User.Services/obj/
