--- a/Backend/N5/FrontEnd/n5app/package.json
+++ b/Backend/N5/FrontEnd/n5app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-tailwind/react": "^2.1.2",
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -12,6 +13,7 @@
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
     "axios": "^1.5.1",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
@@ -20,9 +22,11 @@
     "react-use-websocket": "^3.0.0",
     "redux-saga": "^1.2.1",
     "reflect-metadata": "^0.1.13",
+    "tailwind-datepicker-react": "^1.4.3",
     "tsyringe": "^4.7.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/redux-logger": "^3.0.9",
