--- a/Backend/N5/src/User/N5.User.Api/N5.User.Api.csproj
+++ b/Backend/N5/src/User/N5.User.Api/N5.User.Api.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+  <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.WebSockets" Version="2.2.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
@@ -27,7 +28,6 @@
     <ProjectReference Include="..\..\Architecture\N5.Eda\N5.Eda.csproj" />
     <ProjectReference Include="..\..\Architecture\N5.Event\N5.Event.csproj" />
     <ProjectReference Include="..\..\Architecture\N5.TryCatch\N5.TryCatch.csproj" />
-    <ProjectReference Include="..\..\N5.Telemetry\N5.Telemetry.csproj" />
     <ProjectReference Include="..\..\Observability\N5.Telemetry\N5.Telemetry.csproj" />
     <ProjectReference Include="..\N5.Microservice.User\N5.User.Domain\N5.User.Domain.csproj" />
   </ItemGroup>
