--- a/tools/telemetry/prometheus.yaml
+++ b/tools/telemetry/prometheus.yaml
@@ -1,20 +1,18 @@
 global:
-  scrape_interval: 15s  # Intervalo global de scraping
+  scrape_interval: 15s
 
 scrape_configs:
-  # Scraping de métricas de Jaeger
   - job_name: 'jaeger'
     static_configs:
-      - targets: ['jaeger:14269']  # Puerto de métricas Prometheus de Jaeger
+      - targets: ['jaeger:14269']
 
-  # Scraping de métricas de OpenTelemetry Collector
   - job_name: 'opentelemetry-collector'
     static_configs:
-      - targets: ['opentelemetry-collector:8889']  # Puerto donde OTEL expone métricas Prometheus
+      - targets: ['opentelemetry-collector:8889']
 
-  # Scraping de métricas de tu aplicación
   - job_name: 'my_app_metrics'
     scheme: https
     tls_config:
       insecure_skip_verify: true
-    static
+    static_configs:
+      - targets: ['host.docker.internal:7005']
