--- a/Backend/N5/src/Observability/N5.Telemetry/N5.Telemetry.csproj
+++ b/Backend/N5/src/Observability/N5.Telemetry/N5.Telemetry.csproj
@@ -14,6 +14,7 @@
 		<PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.5.1-beta.1" />
 		<PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="1.5.1" />
 		<PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="1.6.0-rc.1" />
+		<PackageReference Include="System.Diagnostics.PerformanceCounter" Version="5.0.0" />
 		
 	</ItemGroup>
 </Project>
